--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,16 @@
-$light_color: #7ea3c9;
-
-body{
-  .icon{
-    height: 100px;
-    float: right;
-    margin-top: -80px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 50px;
-  }
+.center {
+  text-align: center;
 }
+
+// $light_color: #7ea3c9;
+//
+// body{
+//   .icon{
+//     height: 100px;
+//     float: right;
+//     margin-top: -80px;
+//     margin-right: auto;
+//     margin-left: auto;
+//     padding-right: 50px;
+//   }
+// }
