add name to results on index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,15 +2,8 @@
   text-align: center;
 }
 
-// $light_color: #7ea3c9;
-//
-// body{
-//   .icon{
-//     height: 100px;
-//     float: right;
-//     margin-top: -80px;
-//     margin-right: auto;
-//     margin-left: auto;
-//     padding-right: 50px;
-//   }
-// }
+img {
+  height: 200px;
+  width: 200px;
+  border-radius: 20px;
+}
