--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,15 @@
-.center {
-  text-align: center;
-}
-
 img {
   height: 200px;
   width: 200px;
   border-radius: 20px;
+}
+
+.center {
+  text-align: center;
+}
+
+#submit_user_name {
+  float: right;
+  clear: both;
+  margin: 5px 30px 0 0;
 }
