add css to form

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,9 +47,7 @@ a:hover {
 }
 
 #submit_user_name {
-  float: right;
-  clear: both;
-  margin: 5px 30px 0 0;
+  margin: 10px 0 0 95px ;
 }
 
 #repo_links a {
