add styling to description

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,10 +50,21 @@ hr {
   font-size: 5.2em;
 }
 
-#submit_user_name {
-  margin: 10px 0 0 95px ;
-}
-
 .links {
   display: block;
+}
+
+.description {
+  color: #333;
+}
+
+#repo_links {
+  margin-left: 60px;
+}
+
+#display_name {
+  color: #EE5921;
+}
+#submit_user_name {
+  margin: 10px 0 0 95px ;
 }
